<resources>
    <string name="app_name">Mobotithe</string>
    <string name="package_name">com.felixfavour.Mobotithe</string>
    <string name="app_version">Version 1.0.0</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="motto">Let us keep track of your Transactions for you</string>
    <string name="i_already_have_an_account">I already have an account</string>
    <string name="sign_in_with">Sign In with:</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="hello">Hello,</string>
    <string name="total_savings">Week\'s Savings</string>
    <string name="title_transactions">Transaction</string>
    <string name="title_history">History</string>
    <string name="register_new_transaction">Create Transaction</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="amount">Amount</string>
    <string name="default_amount">Default Amount</string>
    <string name="submit_amount">Submit Amount</string>
    <string name="register">Register</string>
    <string name="income_category_source">Income Category/Source</string>
    <string name="expense_category_source">Expense Category/Source</string>
    <string name="monthly_weekly_daily">Monthly/Weekly/Daily</string>
    <string name="currency">Currency</string>
    <string name="display_options">Display Options</string>
    <string name="account">Account</string>
    <string name="log_out">Log Out</string>
    <string name="about">About</string>
    <string name="visit_developer_s_page">Visit Developer\'s Page</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="get_support">Get Support</string>
    <string name="donate">Donate</string>
    <string name="rights_and_licenses">Rights and Licenses</string>
    <string name="policies">Policies</string>
    <string name="my_profile">My Profile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lorem">This is a happy text! Supposed to be a lorem, but there is no time</string>
    <string name="license">License</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="dob">Birthday</string>
    <string name="sign_up">Start Saving</string>
    <string name="sign_up_with_e_mail_instead">Sign Up with E-mail Instead</string>
    <string name="create_new_account">Create New Account</string>
    <string name="track_every_penny">Track Every Penny!</string>
    <string name="middle_name">Middle Name</string>
    <string name="change_picture">Update Picture</string>
    <string name="view_profile_picture">View Picture</string>
    <string name="delete_profile_picture">Delete Picture</string>
    <string name="save_user_data">Save Data</string>
    <string name="income_category_added_prompt">Transaction was Successful</string>
    <string name="income_category_not_added_prompt">Transaction Not Yet Successful</string>
    <string name="reload">Reload</string>
    <string name="this_week">This Week</string>
    <string name="this_month">This Month</string>
    <string name="today">Today</string>
    <string name="transactions">Transactions</string>
    <string name="register_income">Register Income</string>
    <string name="register_expense">Register Expense</string>
    <string name="register_transaction">Register Transaction</string>
    <string name="submit_income">Submit Income</string>
    <string name="expenses">Expenses</string>
    <string name="incomes">Incomes</string>
    <string name="greeting_morning">Good Morning,</string>
    <string name="greeting_afternoon">Good Afternoon,</string>
    <string name="greeting_evening">Good Evening,</string>
    <string name="history_deletion_success">Histories were deleted Successfully</string>
    <string name="income_deletion_success">Incomes were deleted Successfully</string>
    <string name="expense_deletion_success">Expenses were deleted Successfully</string>
    <string name="weekly_budget">Weekly Budget</string>
    <string name="what_transaction_are_you_registering">What Transaction are you Registering?</string>
    <string name="income">Income</string>
    <string name="expense">Expense</string>
    <string name="updated_profile_successfully">Profile was Updated Successfully</string>
    <string name="updated_profile_unsuccessfully">Profile was not updated</string>
    <string name="will_be_updated">Profile will be Updated after connecting to the Internet</string>
    <string name="add_income">Add Income</string>
    <string name="add_expense">Add Expense</string>
    <string name="delete_income">Delete Income</string>
    <string name="delete_expense">Delete Expense</string>
    <string name="fill_all_fields">Fill all required Fields</string>
    <string name="unhealthy_internet">You are not connected to a Healthy Internet Connection</string>
    <string name="email_sent">E-mail Sent! Verify Email Before Filling all fields</string>
    <string name="ensure_email_is_verified">Ensure that email is verified</string>
    <string name="welcome">Welcome! Edit your data in Profile</string>
    <string name="empty_income">Oops! Looks like you have not saved any Incomes yet.</string>
    <string name="empty_expense">Oops! Looks like you have not saved any Expenses yet.</string>
</resources>
