<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ScrollView
        android:id="@+id/frameLayout10"
        layout_height="match_parent"
        layout_width="match_parent"
        android:fillViewport="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/linearLayout11"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/textView4"
                    style="@style/GenericText.SettingsHeader"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/display_options" />

                <Spinner
                    android:id="@+id/ui_mode"
                    style="@style/GenericText.SettingsSubtext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:prompt="@string/amount"
                    android:entries="@array/ui_mode"
                    tools:listitem="@layout/spinner_dropdown_popup_item" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout8"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout11">

                <TextView
                    android:id="@+id/textView3"
                    style="@style/GenericText.SettingsHeader"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/account" />

                <Button
                    android:id="@+id/log_out"
                    style="@style/GenericText.SettingsSubtext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/log_out" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout8"
                app:layout_constraintVertical_bias="0.0">

                <TextView
                    android:id="@+id/textView"
                    style="@style/GenericText.SettingsHeader"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/about" />

                <Button
                    android:id="@+id/visit_developer"
                    style="@style/GenericText.SettingsSubtext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/visit_developer_s_page" />

                <Button
                    android:id="@+id/getSupport"
                    style="@style/GenericText.SettingsSubtext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/get_support" />

                <Button
                    android:id="@+id/donate"
                    style="@style/GenericText.SettingsSubtext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/donate" />

                <Button
                    android:id="@+id/license"
                    style="@style/GenericText.SettingsSubtext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rights_and_licenses" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    android:text="@string/app_version"
                    android:textStyle="bold" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>