<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/onboardingwelcome"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/onboardingColor"
        tools:context=".gui.view.onboarding.OnboardingWelcomeFragment">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:srcCompat="@drawable/ic_onboard_image"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/tableRow"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView">

            <TextView
                android:id="@+id/mobotitheText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/segoeuib"
                android:text="@string/app_name"
                android:textAlignment="center"
                android:textColor="@color/primaryTextColor"
                android:textSize="@dimen/onboarding_title" />

            <TextView
                android:id="@+id/motto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/segoeuib"
                android:text="@string/motto"
                android:textAlignment="center"
                android:textColor="@color/primaryTextColor"
                android:textSize="@dimen/onboarding_texts" />
        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/tableRow"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/go_to_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

            <Button
                android:id="@+id/googleLogin"
                android:layout_width="154dp"
                android:layout_height="50dp"
                android:background="@drawable/rounded_button"
                android:backgroundTint="@color/primaryTextColor"
                android:drawableLeft="@drawable/ic_google"
                android:drawablePadding="@dimen/drawable_gap"
                android:fontFamily="@font/segoeuib"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:text="@string/google"
                android:textColor="@color/onboardingColor"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/go_to_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/rounded_button"
            android:fontFamily="@font/segoeuib"
            android:text="@string/i_already_have_an_account"
            android:textColor="@color/primaryTextColor"
            android:textSize="@dimen/onboarding_texts"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
