<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        tools:context=".gui.view.income.RegisterIncomeFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <LinearLayout
                android:id="@+id/linearLayout7"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toTopOf="@+id/submitAmount"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/TextInputLayout2"
                    style="@style/notLoginTextInputLayoutStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/primaryColor"
                    app:boxStrokeColor="@color/primaryColor"
                    app:boxStrokeWidth="2dp"
                    app:hintTextColor="@color/primaryColor">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/income_category"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="20dp"
                        android:fontFamily="@font/segoeuib"
                        android:hint="@string/income_category_source"
                        android:inputType="number"
                        android:textColorHint="@color/primaryColor" />

                </com.google.android.material.textfield.TextInputLayout>

                <Spinner
                    android:id="@+id/interval"
                    style="@style/GenericText.SettingsSubtext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="15dp"
                    android:entries="@array/intervals"
                    android:padding="10dp"
                    tools:listitem="@layout/spinner_dropdown_popup_item" />


                <com.google.android.material.textfield.TextInputLayout
                    style="@style/notLoginTextInputLayoutStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/primaryColor"
                    app:boxStrokeColor="@color/primaryColor"
                    app:boxStrokeWidth="2dp"
                    app:hintTextColor="@color/primaryColor">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/amount"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="20dp"
                        android:fontFamily="@font/segoeuib"
                        android:hint="@string/default_amount"
                        android:inputType="number"
                        android:textColorHint="@color/primaryColor" />

                </com.google.android.material.textfield.TextInputLayout>


            </LinearLayout>

            <Button
                android:id="@+id/submitIncome"
                style="@style/RoundedButton.Orange"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"
                android:layout_weight="1"
                android:paddingStart="@dimen/button_padding"
                android:paddingLeft="@dimen/button_padding"
                android:paddingEnd="@dimen/button_padding"
                android:paddingRight="@dimen/button_padding"
                android:text="@string/register"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>