<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <FrameLayout
        android:id="@+id/login_fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".gui.view.login.LoginFragment">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/onboardingColor"
            android:scaleType="centerCrop"
            android:src="@drawable/background" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginTop="70dp"
                android:layout_marginBottom="11dp"
                app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_mobotithe_logo" />

            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/editText_padding"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="@dimen/editText_padding"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView3">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/loginTextInputLayoutStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:textColorHint="@color/primaryTextColor"
                    app:boxStrokeColor="@color/primaryTextColor"
                    app:hintTextColor="@color/primaryTextColor"
                    app:startIconDrawable="@drawable/ic_user_icon"
                    app:startIconTint="@color/primaryTextColor">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/email_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:drawablePadding="@dimen/drawable_gap"
                        android:ems="10"
                        android:fontFamily="@font/segoeuib"
                        android:hint="@string/e_mail"
                        android:inputType="textEmailAddress"
                        android:textColor="@color/primaryTextColor" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/loginTextInputLayoutStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/primaryTextColor"
                    app:boxStrokeColor="@color/primaryTextColor"
                    app:endIconCheckable="true"
                    app:endIconMode="password_toggle"
                    app:endIconTint="@color/primaryTextColor"
                    app:hintTextColor="@color/primaryTextColor"
                    app:startIconDrawable="@drawable/ic_password"
                    app:startIconTint="@color/primaryTextColor">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/passwordInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:drawablePadding="@dimen/drawable_gap"
                        android:ems="10"
                        android:fontFamily="@font/segoeuib"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:textColor="@color/primaryTextColor"
                        app:hintTextColor="@color/primaryTextColor" />

                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:backgroundTint="@color/primaryLightColor"
                    android:fontFamily="@font/segoeuib"
                    android:text="@string/login"
                    android:textAllCaps="false"
                    android:textColor="@color/primaryTextColor" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="140dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="8dp"
                        android:visibility="visible"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <Button
                            android:id="@+id/googleLogin"
                            style="@style/Widget.MaterialComponents.Button.OutlinedButton.Mobotithe"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_marginStart="16dp"
                            android:drawableLeft="@drawable/ic_google"
                            android:drawablePadding="@dimen/drawable_gap"
                            android:fontFamily="@font/segoeuib"
                            android:paddingStart="15dp"
                            android:paddingEnd="15dp"
                            android:text="@string/google"
                            android:textColor="@color/primaryTextColor" />

                        <Button
                            android:id="@+id/register_new_account"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/rounded_button"
                            android:backgroundTint="@color/primaryTextColor"
                            android:fontFamily="@font/segoeuib"
                            android:layout_marginTop="20dp"
                            android:layout_below="@id/googleLogin"
                            android:paddingStart="@dimen/button_padding"
                            android:paddingLeft="@dimen/button_padding"
                            android:paddingEnd="@dimen/button_padding"
                            android:paddingRight="@dimen/button_padding"
                            android:text="@string/create_new_account"
                            android:textAllCaps="false"
                            android:textColor="@color/onboardingColor"
                            android:textSize="@dimen/onboarding_texts" />

                    </RelativeLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>

            <ProgressBar
                android:id="@+id/loginProgressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone"
                android:background="@color/TransparentPrimaryGreyColor"
                android:padding="170dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </FrameLayout>
</layout>
